test/arrays/vass/const-checking.fields.good
const-checking.fields.chpl:32: In function 'main':
const-checking.fields.chpl:34: error: illegal lvalue in assignment
const-checking.fields.chpl:36: error: illegal lvalue in assignment
const-checking.fields.chpl:38: error: illegal lvalue in assignment
const-checking.fields.chpl:40: error: illegal lvalue in assignment
const-checking.fields.chpl:43: error: illegal lvalue in assignment
const-checking.fields.chpl:44: error: illegal lvalue in assignment
const-checking.fields.chpl:45: error: illegal lvalue in assignment
const-checking.fields.chpl:47: error: illegal lvalue in assignment
const-checking.fields.chpl:48: error: illegal lvalue in assignment
const-checking.fields.chpl:49: error: illegal lvalue in assignment
